--- a/src/components/CardFace.module.css
+++ b/src/components/CardFace.module.css
@@ -95,6 +95,7 @@
   font-weight: 700;
   font-size: 0.72rem;
   line-height: 1.1;
+  color: var(--text-strong);
 }
 
 .cardCost {
